[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/other/options_tab.png" type="Texture" id=1]
[ext_resource path="res://scenes/main_menu/button.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/main_menu/in_game_menu.gd" type="Script" id=3]
[ext_resource path="res://scenes/main_menu/options_tab.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/other/disabled_button.png" type="Texture" id=5]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://assets/fonts/FFFFORWA.TTF"

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = SubResource( 1 )

[sub_resource type="InputEventAction" id=3]
action = "ui_cancel"

[sub_resource type="ShortCut" id=4]
shortcut = SubResource( 3 )

[sub_resource type="Animation" id=5]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Container/Control:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1600, 420 ), Vector2( 640, 420 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Container/black_bg:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.14902, 0.2, 0.215686, 0 ), Color( 0.14902, 0.2, 0.215686, 0.784314 ) ]
}

[sub_resource type="Animation" id=6]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Container/options_tab:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -700, 173 ), Vector2( 50, 173 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Container/Control:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 640, 420 ), Vector2( 950, 420 ) ]
}

[node name="in_game_menu" type="CanvasLayer"]
pause_mode = 2
layer = 10
script = ExtResource( 3 )

[node name="Container" type="Control" parent="."]
margin_left = -1.16632
margin_top = -1.05264
margin_right = 1274.83
margin_bottom = 724.947
__meta__ = {
"_edit_use_anchors_": false
}

[node name="black_bg" type="ColorRect" parent="Container"]
margin_left = -159.075
margin_top = -104.18
margin_right = 1327.93
margin_bottom = 889.82
color = Color( 0.14902, 0.2, 0.215686, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="options_tab" parent="Container" instance=ExtResource( 4 )]
margin_left = -700.0
margin_top = 173.0
margin_right = -130.002
margin_bottom = 553.0

[node name="Control" type="Control" parent="Container"]
margin_left = 1600.0
margin_top = 420.0
margin_right = 1600.0
margin_bottom = 420.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Container/Control"]
position = Vector2( 0.949982, -43.7382 )
scale = Vector2( 3, 2.31659 )
texture = ExtResource( 1 )

[node name="Title" type="Label" parent="Container/Control"]
margin_left = -283.0
margin_top = -189.0
margin_right = 286.0
margin_bottom = 106.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.137255, 0.168627, 0.168627, 1 )
text = "You Win"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="buttons" type="Control" parent="Container/Control"]
margin_left = 10.0
margin_top = 111.357
margin_right = 50.0
margin_bottom = 151.357
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="next" parent="Container/Control/buttons" instance=ExtResource( 2 )]
margin_top = 10.0
margin_bottom = 90.0
disabled = true
texture_disabled = ExtResource( 5 )
text = "Next"

[node name="options" parent="Container/Control/buttons" instance=ExtResource( 2 )]
margin_left = -200.0
margin_top = -400.0
margin_right = -20.0
margin_bottom = -320.0
text = "Options"

[node name="restart" parent="Container/Control/buttons" instance=ExtResource( 2 )]
margin_left = -200.0
margin_top = 10.0
margin_right = -20.0004
margin_bottom = 90.0
text = "Restart"

[node name="exit" parent="Container/Control/buttons" instance=ExtResource( 2 )]
margin_top = -400.0
margin_bottom = -320.0
text = "Exit"

[node name="pause" parent="Container" instance=ExtResource( 2 )]
margin_left = 1076.96
margin_top = 22.7208
margin_right = 1256.96
margin_bottom = 102.721
shortcut = SubResource( 4 )
text = "Pause"

[node name="anims" type="AnimationPlayer" parent="."]
anims/menu = SubResource( 5 )
anims/options = SubResource( 6 )
[connection signal="pressed" from="Container/Control/buttons/next" to="." method="_on_next_pressed"]
[connection signal="pressed" from="Container/Control/buttons/options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Container/Control/buttons/restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="Container/Control/buttons/exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="Container/pause" to="." method="_on_pause_pressed"]
